revert changes