@@ -5,4 +5,4 @@ ADD src/main/resources/log4j2.xml log4j2.xml
 
 RUN apk --no-cache add curl
 
-ENTRYPOINT ["java","-Dlog4j.configurationFile=log4j2.xml", "--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED", "-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dlog4j.configurationFile=log4j2.xml", "-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
